# configs

./: .envs  README.md  keymap.json  pyproject.toml  pyrightconfig.json
mac/: cron.txt  enable_dark_mode.sh  enable_light_mode.sh  set_dark_mode.scpt  set_light_mode.scpt
zed/: keymap.json  settings.json
